# tinyML

./: .gitignore  Backpropagation  Backpropagation.cpp  CMakeLists.txt  README.md  W.cb  activation.hpp  common.hpp  dataset.cpp  dataset.h  dataset.hpp  demo  demo.cpp  layer.hpp  main.cpp  matrix_vector_algebra.h  operations.cpp  tinyML.sln  tinyML.vcxproj  tinyML.vcxproj.filters  types.h
Backpropagation.dSYM/Contents/Resources/DWARF/: Backpropagation
demo.dSYM/Contents/Resources/DWARF/: demo
include/: activation_function.hpp  common.hpp  dataset.hpp  default_activation_functions.hpp  layer.hpp  layer_connection.hpp  layer_definition.hpp  multi_layer_perceptron.hpp  serializable.hpp
include/layers/: connection.hpp  definition.hpp  trainer.hpp
include/layers/dense/: connection.hpp  definition.hpp  trainer.hpp
include/layers/input/: connection.hpp  definition.hpp  trainer.hpp
include/math/: matrix.hpp  matrix_view.hpp  vector_view.hpp
include/mnist/: mnist_reader_common.h  mnist_reader_less.h
src/: dataset.cpp  layer.cpp  layer_connection.cpp  linalg.cpp  linalg.hpp  multi_layer_perceptron.cpp
src/layers/: connection.cpp  definition.cpp  trainer.cpp
src/layers/dense/: connection.cpp  definition.cpp  trainer.cpp
src/layers/input/: connection.cpp  definition.cpp  trainer.cpp
tests/: CMakeLists.txt
tests/src/: Backpropagation.cpp  main.cpp
